--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -7,9 +7,9 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.8C24D059" = "visualizer"
+	"last_search.8C24D059" = "timeline"
 	"OpenInspectorPreview.8C24D059" = "0"
-	"currentGroup.8C24D059" = "all"
+	"currentGroup.8C24D059" = "menu"
 }
 providers = {
 	adb = {
@@ -56,6 +56,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"time"
 ]
 searchItemFavorites = [
 ]
