--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -7,7 +7,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.8C24D059" = "timeline"
+	"last_search.8C24D059" = "target2"
 	"OpenInspectorPreview.8C24D059" = "0"
 	"currentGroup.8C24D059" = "menu"
 }
@@ -56,6 +56,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"ta"
 	"time"
 ]
 searchItemFavorites = [
