--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,11 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+.vscode/settings.json
+
+Assets/Plugins/Zenject/Source/Zenject.csproj.meta
+
+UserSettings/EditorUserSettings.asset
+
+UserSettings/Layouts/default-2022.dwlt
