--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,4 @@ crashlytics-build.properties
 .vscode/settings.json
 
 Assets/Plugins/Zenject/Source/Zenject.csproj.meta
-
-UserSettings/EditorUserSettings.asset
-
-UserSettings/Layouts/default-2022.dwlt
+UserSettings
